test draw + main screen

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,9 +9,9 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/container"
-        android:name="com.bajenovsasha.roadsign_zakaz.presentation.features.roaddraw.RoadDrawFragment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:name="com.bajenovsasha.roadsign_zakaz.presentation.features.main.MainFragment"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
