--- a/app/src/main/res/layout/fragment_road_draw.xml
+++ b/app/src/main/res/layout/fragment_road_draw.xml
@@ -20,7 +20,7 @@
             android:id="@+id/drawView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="invisible"
+            android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -32,6 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:text="TextView"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -43,6 +44,7 @@
             android:background="@drawable/bt_save"
             android:text="Сохранить"
             android:textSize="16sp"
+            android:visibility="gone"
             app:layout_constraintBottom_toTopOf="@+id/keyboardview"
             app:layout_constraintEnd_toEndOf="@+id/txSign"
             app:layout_constraintStart_toStartOf="@+id/txSign"
