--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.bajenovsasha.roadsign_zakaz.presentation.features.roaddraw.view.DrawView
+        <com.bajenovsasha.roadsign_zakaz.uikit.DrawView
             android:id="@+id/drawView2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
