--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -24,7 +24,7 @@
             android:id="@+id/imRoadNumber1"
             android:layout_width="250dp"
             android:layout_height="65dp"
-            android:src="@drawable/ic_add"
+            android:src="@drawable/plus"
             app:layout_constraintBottom_toTopOf="@+id/imRoadNumber2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -35,7 +35,7 @@
             android:id="@+id/imRoadNumber2"
             android:layout_width="250dp"
             android:layout_height="65dp"
-            android:src="@drawable/ic_add"
+            android:src="@drawable/plus"
             app:layout_constraintBottom_toTopOf="@+id/imRoadNumber3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -46,7 +46,7 @@
             android:id="@+id/imRoadNumber3"
             android:layout_width="250dp"
             android:layout_height="65dp"
-            android:src="@drawable/ic_add"
+            android:src="@drawable/plus"
             app:layout_constraintBottom_toTopOf="@+id/imRoadNumber4"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -57,7 +57,7 @@
             android:id="@+id/imRoadNumber4"
             android:layout_width="250dp"
             android:layout_height="65dp"
-            android:src="@drawable/ic_add"
+            android:src="@drawable/plus"
             app:layout_constraintBottom_toTopOf="@+id/imRoadNumber5"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -68,7 +68,7 @@
             android:id="@+id/imRoadNumber5"
             android:layout_width="250dp"
             android:layout_height="65dp"
-            android:src="@drawable/ic_add"
+            android:src="@drawable/plus"
             app:layout_constraintBottom_toTopOf="@+id/imRoadNumber6"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -79,7 +79,7 @@
             android:id="@+id/imRoadNumber6"
             android:layout_width="250dp"
             android:layout_height="65dp"
-            android:src="@drawable/ic_add"
+            android:src="@drawable/plus"
             app:layout_constraintBottom_toTopOf="@+id/btSaveRoadNumberList"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
