--- a/app/src/main/res/layout/fragment_road_draw.xml
+++ b/app/src/main/res/layout/fragment_road_draw.xml
@@ -59,6 +59,8 @@
             android:focusable="true"
             android:focusableInTouchMode="true"
             android:visibility="gone"
+            android:keyBackground="@color/keyboard__key_background"
+            android:keyTextColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
