--- a/app/src/main/res/layout/choose_road_number_dialog_fragment.xml
+++ b/app/src/main/res/layout/choose_road_number_dialog_fragment.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="300dp"
-    android:layout_height="200dp"
+    android:layout_height="300dp"
     android:background="@drawable/round_corner">
 
 
@@ -16,15 +16,28 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.24000001"
         app:srcCompat="@drawable/f1" />
 
     <ImageView
         android:id="@+id/btRoadNum3"
         android:layout_width="250dp"
         android:layout_height="80dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/btAddImage"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btRoadNum2"
         app:srcCompat="@drawable/f2" />
+
+    <ImageView
+        android:id="@+id/btAddImage"
+        android:layout_width="250dp"
+        android:layout_height="80dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btRoadNum3"
+        app:srcCompat="@drawable/back_image" />
 </androidx.constraintlayout.widget.ConstraintLayout>
